--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-    <title>Welcome to thebox</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="theBox - Find what's in store in the city you live in">
-    <meta name="author" content="thebox">
-
-    <!-- Le styles -->
-    <link rel="shortcut icon" href="favicon.ico">
-
+    <title>residence based authentication</title>
   </head>
-  <body >
-<div rel="WTCIJTYE" class="lrdiscoverwidget" data-logo="on" data-background="on" data-share-url="www.verylargebox.com" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
+  <body>
+	<div>This is server side implementation (on Rails) that supports <a href="https://github.com/qnoid/TBUserIdentity">residence based on authentication</a> via email.
+The app is deployed on heroku at <a href="http://user-identity-nsconf.herokuapp.com" title="user identity nsconf at heroku">user-identity-nsconf.herokuapp.com</a> under <a href="www.qnoid.com">qnoid</a>'s account.<div>
   </body>
 </html>
