fixed link to qnoid

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
 	<div>This is server side implementation (on Rails) that supports <a href="https://github.com/qnoid/TBUserIdentity">residence based on authentication</a> via email.
-The app is deployed on heroku at <a href="http://user-identity-nsconf.herokuapp.com" title="user identity nsconf at heroku">user-identity-nsconf.herokuapp.com</a> under <a href="www.qnoid.com">qnoid</a>'s account.<div>
+The app is deployed on heroku at <a href="http://user-identity-nsconf.herokuapp.com" title="user identity nsconf at heroku">user-identity-nsconf.herokuapp.com</a> under <a href="http://www.qnoid.com">qnoid</a>'s account.<div>
   </body>
 </html>
